--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="js/secrets.js"></script>
     <script src="js/app.js"></script>
     <script src="js/gitUserSearchController.js"></script>
   </head>
