--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body ng-controller="GitUserSearchController as searchCtrl">
     <div>
       <form class="form-horizontal">
-        <input type="text", ng-model="searchCtrl.searchTerm"
+        <input type="text"  ng-model="searchCtrl.searchTerm"
                             ng-change="searchCtrl.doSearch()"
-                            ng-model-otpions="{ updateOn: 'default blur',
+                            ng-model-options="{ updateOn: 'default blur',
                             debounce: {'default': 500, 'blur': 0} }">
         <button class="btn" ng-click="searchCtrl.doSearch()">Search</button>
       </form>
