--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="js/app.js"></script>
     <script src="js/searchFactory.js"></script>
     <script src="js/gitUserSearchController.js"></script>
+
+    <script src="test/e2e/mocks/githubUserSearch.js"></script>
+    <script src="test/e2e/conf.js"></script>
+    <script src="test/e2e/githubProfileFeature.js"></script>
+
   </head>
 
   <body ng-controller="GitUserSearchController as searchCtrl">
