--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="GitUserSearch">
   <head>
     <meta charset="utf-8">
-    <title>Github user search</title>
+    <title>Todo list</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
