--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 
-<html lang="en" ng-app="GitUserSearch">
+<html lang="en" ng-app="toDoList">
   <head>
     <meta charset="utf-8">
     <title>Todo list</title>
@@ -10,11 +10,10 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/secrets.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/searchFactory.js"></script>
     <script src="js/gitUserSearchController.js"></script>
   </head>
 
-  <body ng-controller="GitUserSearchController as taskCtrl">
+  <body ng-controller="toDoListController as taskCtrl">
     <div>
       <form class="form-horizontal">
         <input type="text" ng-model="taskCtrl.taskText">
