Task list complete with no done feature.

--- a/index.html
+++ b/index.html
@@ -16,49 +16,15 @@
     <div>
       <form class="form-horizontal">
         <input type="text" ng-model="taskCtrl.taskText">
-        <button class="btn" ng-click="taskCtrl.addItem()">Add task</button>
+        <button class="btn" id='addTaskButton' ng-click="taskCtrl.addItem()"> Add task </button>
       </form>
 
       <ul class="task-group">
         <li ng-repeat="task in taskCtrl.toDoItems">
           {{ task }}
+          <button class="btn" id='deleteTaskButton' ng-click="taskCtrl.deleteItem($index)"> Delete task </button>
         </li>
       </ul>
     </div>
   </body>
 </html>
-
-
-<!-- <html lang="en" ng-app="GitUserSearch">
-  <head>
-    <meta charset="utf-8">
-    <title>Github user search</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="js/secrets.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/searchFactory.js"></script>
-    <script src="js/gitUserSearchController.js"></script>
-  </head>
-
-  <body ng-controller="GitUserSearchController as searchCtrl">
-    <div>
-      <form class="form-horizontal">
-        <input type="text"  ng-model="searchCtrl.searchTerm"
-                            ng-change="searchCtrl.doSearch()"
-                            ng-model-options="{ updateOn: 'default blur',
-                            debounce: {'default': 500, 'blur': 0} }">
-        <button class="btn" ng-click="searchCtrl.doSearch()">Search</button>
-      </form>
-      <ul class="list-group">
-        <li ng-repeat="user in searchCtrl.searchResult.items">
-          <img ng-src="{{user.avatar_url}}&s=50">
-          <a ng-href="{{user.html_url}}">{{user.login}}</a>
-        </li>
-      </ul>
-    </div>
-  </body>
-</html>
- -->
